done game layout

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,35 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000E56"
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:textSize="40dp"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:text="1/10"></TextView>
+        android:text="1/10"
+        android:textColor="@color/white"></TextView>
     <ImageView
         android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_marginTop="-50dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/flag"
         ></ImageView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:orientation="horizontal">
         <Button
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="190dp"
+            android:layout_height="130dp"
+            android:background ="@drawable/buttonborder"
+            android:layout_marginRight="5dp"
+            app:backgroundTint ="#1962F3"
             android:text="USA">
         </Button>
         <Button
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="190dp"
+            android:layout_height="130dp"
+            android:background ="@drawable/buttonborder"
+            android:layout_marginLeft="5dp"
+            app:backgroundTint ="#F31919"
             android:text="UK">
         </Button>
     </LinearLayout>
@@ -39,13 +50,19 @@
         android:gravity="center"
         android:orientation="horizontal">
         <Button
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="190dp"
+            android:layout_height="130dp"
+            android:background ="@drawable/buttonborder"
+            android:layout_marginRight="5dp"
+            app:backgroundTint ="@null"
             android:text="USA">
         </Button>
         <Button
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="190dp"
+            android:layout_height="130dp"
+            android:background ="@drawable/buttonborder"
+            android:layout_marginLeft="5dp"
+            app:backgroundTint ="#FF9800"
             android:text="UK">
         </Button>
     </LinearLayout>
