--- a/app/src/main/res/layout/activity_messageslist.xml
+++ b/app/src/main/res/layout/activity_messageslist.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#96B6C5"
+    android:background="@drawable/chatapp_background"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
