--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:gravity="center"
     >
         <ImageView
                 android:layout_width="match_parent"
@@ -25,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="83dp"
                 android:orientation="horizontal"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="45dp"
                 android:background="@android:color/transparent">
 
             <ImageView
@@ -49,13 +50,59 @@
                     android:textSize="35sp">
             </TextView>
         </LinearLayout>
-        <LinearLayout
-                android:layout_width="330dp"
+            <Button
+                    android:layout_width="160dp"
+                    android:layout_height="55dp"
+                    android:background="@drawable/loginbtnborder"
+                    android:text="Login"
+                    android:layout_marginStart="45dp"
+                    android:layout_marginTop="200dp"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:backgroundTint="@null"
+            />
+        <Button
+                android:layout_width="160dp"
                 android:layout_height="55dp"
-                android:orientation="horizontal"
+                android:background="@drawable/loginbtnborder"
+                app:backgroundTint="#C8C6C6"
                 android:layout_marginTop="200dp"
-                android:layout_marginLeft="50dp"
-                android:background="@android:color/transparent">
-        </LinearLayout>
+                android:layout_marginStart="215dp"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:text="Sign up"/>
+        <EditText
+                android:layout_width="330dp"
+                android:layout_height="50dp"
+                android:orientation="vertical"
+                android:layout_marginTop="320dp"
+                android:layout_marginStart="45dp"
+                android:hint="  Phone number"
+                android:textColorHint="#ffffff"
+                android:textSize="20sp"
+                android:background="@drawable/edittext_border"
+                android:autofillHints=""/>
+        <EditText
+                android:layout_width="330dp"
+                android:layout_height="50dp"
+                android:orientation="vertical"
+                android:layout_marginTop="320dp"
+                android:layout_marginStart="45dp"
+                android:hint="  Phone number"
+                android:textColorHint="#ffffff"
+                android:textSize="20sp"
+                android:background="@drawable/edittext_border"
+                android:autofillHints=""/>
+        <EditText
+                android:layout_width="330dp"
+                android:layout_height="50dp"
+                android:orientation="vertical"
+                android:layout_marginTop="390dp"
+                android:layout_marginStart="45dp"
+                android:hint="  Password"
+                android:textColorHint="#ffffff"
+                android:textSize="20sp"
+                android:background="@drawable/edittext_border"
+                android:autofillHints=""/>
     </RelativeLayout>
 </layout>
