--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,108 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".view.MainActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".view.MainActivity">
+
     <data>
+
         <variable
-                name="LoginViewModel"
-                type="com.example.demomvvm.viewModel.LoginViewModel"/>
+            name="LoginViewModel"
+            type="com.example.demomvvm.viewModel.LoginViewModel" />
     </data>
-    <RelativeLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"
-    >
-        <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/chatapp_background"
-                android:contentDescription="@drawable/chatapp_background"
-                android:scaleType="centerCrop">
-        </ImageView>
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="83dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="45dp"
-                android:background="@android:color/transparent">
+            android:background="@drawable/chatapp_background"
+            android:orientation="vertical">
 
-            <ImageView
-                    android:layout_width="180dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/chatapp_logo"
-                    android:contentDescription="@drawable/chatapp_logo"
-                    android:scaleType="centerCrop"
-                    android:paddingStart="80dp">
-            </ImageView>
-            <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="86dp"
-                    android:layout_weight="20"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/chatapp_logo"></ImageView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Chat App"
                     android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:gravity="center_vertical"
-                    android:paddingStart="8dp"
-                    android:paddingTop="5dp"
-                    android:textSize="35sp">
-            </TextView>
-        </LinearLayout>
-            <Button
-                    android:layout_width="160dp"
-                    android:layout_height="55dp"
+                    android:textSize="45sp"
+                    android:textStyle="bold"></TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginVertical="80dp"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/loginbtnborder"
+                    android:paddingHorizontal="50dp"
                     android:text="Login"
-                    android:layout_marginStart="45dp"
-                    android:layout_marginTop="200dp"
                     android:textSize="25sp"
                     android:textStyle="bold"
-                    app:backgroundTint="@null"
-            />
-        <Button
-                android:layout_width="160dp"
-                android:layout_height="55dp"
+                    app:backgroundTint="@null" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/loginbtnborder"
+                    android:paddingHorizontal="50dp"
+                    android:text="Sign up"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:backgroundTint="#C8C6C6" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:orientation="vertical">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/buttonborder"
+                    android:layout_marginBottom="20dp"
+                    app:backgroundTint = "#AAB8C2"
+                    android:hint="Phone number"
+                    android:textSize="20dp"
+                    android:textColorHint="@color/white"></EditText>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/buttonborder"
+                    app:backgroundTint = "#AAB8C2"
+                    android:hint="Password"
+                    android:textSize="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:textColorHint="@color/white"></EditText>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Forgot password?"
+                    android:layout_gravity="end"
+                    android:textColor="#C8C8C8">
+                </TextView>
+            </LinearLayout>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/loginbtnborder"
-                app:backgroundTint="#C8C6C6"
-                android:layout_marginTop="200dp"
-                android:layout_marginStart="215dp"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:text="Sign up"/>
-        <EditText
-                android:layout_width="330dp"
-                android:layout_height="50dp"
-                android:orientation="vertical"
-                android:layout_marginTop="320dp"
-                android:layout_marginStart="45dp"
-                android:hint="  Phone number"
-                android:textColorHint="#ffffff"
-                android:textSize="20sp"
-                android:background="@drawable/edittext_border"
-                android:autofillHints=""/>
-        <EditText
-                android:layout_width="330dp"
-                android:layout_height="50dp"
-                android:orientation="vertical"
-                android:layout_marginTop="320dp"
-                android:layout_marginStart="45dp"
-                android:hint="  Phone number"
-                android:textColorHint="#ffffff"
-                android:textSize="20sp"
-                android:background="@drawable/edittext_border"
-                android:autofillHints=""/>
-        <EditText
-                android:layout_width="330dp"
-                android:layout_height="50dp"
-                android:orientation="vertical"
-                android:layout_marginTop="390dp"
-                android:layout_marginStart="45dp"
-                android:hint="  Password"
-                android:textColorHint="#ffffff"
-                android:textSize="20sp"
-                android:background="@drawable/edittext_border"
-                android:autofillHints=""/>
-    </RelativeLayout>
+                app:backgroundTint = "@null"
+                android:layout_marginVertical="30dp"
+                android:layout_marginHorizontal="20dp"
+                android:text="Login"
+                android:textSize="25dp">
+            </Button>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/google"></ImageView>
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:src="@drawable/fb"></ImageView>
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/github"></ImageView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:text="Don’t have account?"
+                    android:layout_marginRight="10dp"
+                    android:textColor="@color/white"></TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:text="Sign up"
+                    android:background="@drawable/underline"
+                    android:textColor="@color/white"></TextView>
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
 </layout>
