--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,8 +64,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/loginbtnborder"
-                    android:paddingHorizontal="50dp"
+                    android:paddingHorizontal="35dp"
                     android:text="Sign up"
+                    android:layout_marginHorizontal="5dp"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     app:backgroundTint="#C8C6C6" />
