--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,6 +66,7 @@
                     android:background="@drawable/loginbtnborder"
                     android:paddingHorizontal="35dp"
                     android:text="Sign up"
+                    android:layout_marginHorizontal="5dp"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     app:backgroundTint="@null" />
