--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -110,20 +110,20 @@
                 android:paddingBottom="30dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:text="Don’t have account?"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"></TextView>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:text="Already have an account?"
+                        android:textColor="@color/white"
+                        android:textSize="20dp"></TextView>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/underline"
-                    android:text="Sign up"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"></TextView>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/underline"
+                        android:text="Login here"
+                        android:textColor="@color/white"
+                        android:textSize="20dp"></TextView>
             </LinearLayout>
 
         </LinearLayout>
