--- a/app/src/main/res/layout/verification.xml
+++ b/app/src/main/res/layout/verification.xml
@@ -122,23 +122,23 @@
                 android:layout_marginTop="20dp"
                 android:gravity="bottom|center"
                 android:orientation="horizontal"
-                android:paddingBottom="30dp">
+                android:paddingBottom="20dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:text="Don’t have account?"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"></TextView>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:text="Already have an account?"
+                        android:textColor="@color/white"
+                        android:textSize="20dp"></TextView>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/underline"
-                    android:text="Sign up"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"></TextView>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/underline"
+                        android:text="Login here"
+                        android:textColor="@color/white"
+                        android:textSize="20dp"></TextView>
             </LinearLayout>
 
         </LinearLayout>
