--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,159 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.MainActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".view.MainActivity">
     <data>
         <variable
-            name="LoginViewModel"
-            type="com.example.demomvvm.viewModel.LoginViewModel" />
+                name="LoginViewModel"
+                type="com.example.demomvvm.viewModel.LoginViewModel"/>
     </data>
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/chatapp_background"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/chatapp_background"
+                android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="45dp"
-                android:gravity="center"
-                android:orientation="horizontal">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="45dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:src="@drawable/chatapp_logo"></ImageView>
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:src="@drawable/chatapp_logo"
+                        android:contentDescription="ChatApp Logo"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="Chat App"
+                        android:textColor="@android:color/white"
+                        android:textSize="45sp"
+                        android:textStyle="bold"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Chat App"
-                    android:textColor="@android:color/white"
-                    android:textSize="45sp"
-                    android:textStyle="bold"></TextView>
+                    android:layout_marginVertical="80dp"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/loginbtnborder"
+                        android:paddingHorizontal="50dp"
+                        android:text="Login"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        app:backgroundTint="@null"/>
+
+                <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/loginbtnborder"
+                        android:paddingHorizontal="35dp"
+                        android:text="Sign up"
+                        android:layout_marginHorizontal="5dp"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        app:backgroundTint="#C8C6C6"/>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginVertical="80dp"
-                android:layout_gravity="center"
-                android:orientation="horizontal">
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/loginbtnborder"
-                    android:paddingHorizontal="50dp"
-                    android:text="Login"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    app:backgroundTint="@null" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/loginbtnborder"
-                    android:paddingHorizontal="35dp"
-                    android:text="Sign up"
-                    android:layout_marginHorizontal="5dp"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    app:backgroundTint="#C8C6C6" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:orientation="vertical">
-                <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/buttonborder"
-                    android:layout_marginBottom="20dp"
-                    app:backgroundTint = "#AAB8C2"
-                    android:hint="Phone number"
-                    android:textSize="20dp"
-                    android:textColorHint="@color/white"></EditText>
+                    android:layout_marginHorizontal="20dp"
+                    android:orientation="vertical">
                 <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/buttonborder"
-                    app:backgroundTint = "#AAB8C2"
-                    android:hint="Password"
-                    android:textSize="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:textColorHint="@color/white"></EditText>
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/buttonborder"
+                        android:layout_marginBottom="20dp"
+                        app:backgroundTint="#AAB8C2"
+                        android:hint="Phone number"
+                        android:textSize="20sp"
+                        android:textColorHint="@color/white"
+                        android:autofillHints=""
+                        android:inputType="number|phone"/>
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/buttonborder"
+                        app:backgroundTint="#AAB8C2"
+                        android:hint="Password"
+                        android:textSize="20dp"
+                        android:layout_marginBottom="10dp"
+                        android:textColorHint="@color/white"
+                        android:autofillHints=""
+                        android:inputType="text"/>
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Forgot password?"
-                    android:layout_gravity="end"
-                    android:textColor="#C8C8C8">
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Forgot password?"
+                        android:layout_gravity="end"
+                        android:textColor="#C8C8C8">
                 </TextView>
             </LinearLayout>
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/loginbtnborder"
-                app:backgroundTint = "@null"
-                android:layout_marginVertical="30dp"
-                android:layout_marginHorizontal="20dp"
-                android:text="Login"
-                android:textSize="25dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/loginbtnborder"
+                    app:backgroundTint="@null"
+                    android:layout_marginVertical="15dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:text="Login"
+                    android:textSize="25sp">
             </Button>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/google"></ImageView>
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
-                    android:src="@drawable/fb"></ImageView>
+
+            >
+                <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/buttonborder"
+                        app:backgroundTint="@color/white"
+                        android:text="Login with Google "
+                        android:textColor="@color/black"
+                        android:textSize="25sp"
+
+                />
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/github"></ImageView>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="Don’t have account?"
-                    android:layout_marginRight="10dp"
-                    android:textColor="@color/white"></TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="Sign up"
-                    android:background="@drawable/underline"
-                    android:textColor="@color/white"></TextView>
-            </LinearLayout>
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/google"
+                        android:contentDescription="Google Image"
+                        android:layout_marginStart="300dp"
+                        android:layout_marginVertical="5dp"
+                />
+
+
+            </RelativeLayout>
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <LinearLayout
+                        android:id="@+id/bottomLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginTop="110dp"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="horizontal">
+
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"
+                            android:text="Don’t have account?"
+                            android:layout_marginEnd="10dp"
+                            android:textColor="@color/white"/>
+
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"
+                            android:text="Sign up"
+                            android:background="@drawable/underline"
+                            android:textColor="@color/white"/>
+                </LinearLayout>
+            </RelativeLayout>
+
 
         </LinearLayout>
     </ScrollView>
