--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,18 +2,18 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".view.MainActivity">
+        tools:context=".view.LoginActivity">
     <data>
         <variable
-                name="LoginViewModel"
-                type="com.example.demomvvm.viewModel.LoginViewModel"/>
+                name="LoginsViewModel"
+                type="com.example.demomvvm.viewModel.LoginsViewModel"/>
     </data>
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/chatapp_background"
                 android:orientation="vertical">
 
@@ -83,7 +83,7 @@
                         android:layout_marginBottom="20dp"
                         app:backgroundTint="#AAB8C2"
                         android:hint="Phone number"
-                        android:textSize="20sp"
+                        android:textSize="25sp"
                         android:textColorHint="@color/white"
                         android:autofillHints=""
                         android:inputType="number|phone"/>
@@ -93,7 +93,7 @@
                         android:background="@drawable/buttonborder"
                         app:backgroundTint="#AAB8C2"
                         android:hint="Password"
-                        android:textSize="20dp"
+                        android:textSize="25dp"
                         android:layout_marginBottom="10dp"
                         android:textColorHint="@color/white"
                         android:autofillHints=""
@@ -124,16 +124,16 @@
                     android:layout_marginHorizontal="20dp"
 
             >
-                <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/buttonborder"
-                        app:backgroundTint="@color/white"
-                        android:text="Login with Google "
-                        android:textColor="@color/black"
-                        android:textSize="25sp"
 
-                />
+                <Button
+                    android:id="@+id/btnGoogleAuth"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/buttonborder"
+                    android:text="Login with Google "
+                    android:textColor="@color/black"
+                    android:textSize="25sp"
+                    app:backgroundTint="@color/white" />
                 <ImageView
                         android:layout_width="45dp"
                         android:layout_height="45dp"
@@ -154,9 +154,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:layout_marginTop="110dp"
+                        android:layout_marginTop="85dp"
                         android:layout_alignParentBottom="true"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        >
 
                     <TextView
                             android:layout_width="wrap_content"
