--- a/app/src/main/res/layout/verification.xml
+++ b/app/src/main/res/layout/verification.xml
@@ -83,12 +83,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:layout_gravity="center"
                     android:layout_marginTop="15dp"
                     android:orientation="horizontal">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
                         android:text="If you didn’t receive a code,"
                         android:layout_marginRight="10dp"
                         android:textColor="@color/white"></TextView>
@@ -96,6 +99,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
                         android:text="Resend"
                         android:textColor="#FB5050"></TextView>
                 </LinearLayout>
