--- a/app/src/main/res/layout/activity_messageslist.xml
+++ b/app/src/main/res/layout/activity_messageslist.xml
@@ -21,6 +21,7 @@
             android:textSize="35dp"
             android:textColor="@color/white"></TextView>
         <ImageView
+            android:id="@+id/img_profile"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_marginLeft="-50dp"
