--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -75,6 +75,7 @@
         android:orientation="vertical"
         android:gravity="bottom">
         <Button
+            android:id="@+id/btn_logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttonborder"
@@ -86,6 +87,4 @@
             android:layout_marginHorizontal="30dp"
             ></Button>
     </LinearLayout>
-
-
 </LinearLayout>
