done log in and log out with firebase

--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -2,14 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".view.MainActivity">
+        tools:context=".View.SignInActivity">
 
-    <data>
-
-        <variable
-                name="LoginViewModel"
-                type="com.example.demomvvm.viewModel.LoginViewModel"/>
-    </data>
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
