--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -2,14 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.MainActivity">
-
-    <data>
-
-        <variable
-            name="LoginViewModel"
-            type="com.example.demomvvm.viewModel.LoginViewModel" />
-    </data>
+    tools:context=".View.SignInActivity">
 
     <ScrollView
         android:layout_width="match_parent"
