--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,14 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.MainActivity">
-
-    <data>
-
-        <variable
-            name="LoginViewModel"
-            type="com.example.demomvvm.viewModel.LoginViewModel" />
-    </data>
+    tools:context=".View.SignUpActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -46,11 +39,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginVertical="80dp"
+                android:layout_marginTop="30dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/btn_Sigin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/loginbtnborder"
@@ -71,22 +65,59 @@
                     android:textStyle="bold"
                     app:backgroundTint="@null" />
             </LinearLayout>
-
+            <FrameLayout
+                android:id="@+id/layoutImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20.00dp">
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/imageProfile"
+                    android:layout_width="80.00dp"
+                    android:layout_height="80.00dp"
+                    android:background="@drawable/background_image"
+                    android:backgroundTint = "#AAB8C2"
+                    android:scaleType="centerCrop"
+                    app:riv_oval="true">
+                </com.makeramen.roundedimageview.RoundedImageView>
+                <TextView
+                    android:id="@+id/textAddImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Add Image"
+                    android:textSize="10.00sp"/>
+            </FrameLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:orientation="vertical">
                 <EditText
+                    android:id="@+id/input_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/buttonborder"
                     android:layout_marginBottom="20dp"
                     app:backgroundTint = "#AAB8C2"
-                    android:hint="Phone number"
+                    android:hint="Name"
                     android:textSize="20dp"
+                    android:inputType="textPersonName"
                     android:textColorHint="@color/white"></EditText>
                 <EditText
+                    android:id="@+id/input_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/buttonborder"
+                    android:layout_marginBottom="20dp"
+                    app:backgroundTint = "#AAB8C2"
+                    android:hint="Email"
+                    android:textSize="20dp"
+                    android:inputType="textEmailAddress"
+                    android:textColorHint="@color/white"></EditText>
+                <EditText
+                    android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/buttonborder"
@@ -94,8 +125,10 @@
                     android:hint="Password"
                     android:textSize="20dp"
                     android:layout_marginBottom="20dp"
+                    android:inputType="textPassword"
                     android:textColorHint="@color/white"></EditText>
                 <EditText
+                    android:id="@+id/input_confirm_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/buttonborder"
@@ -103,22 +136,32 @@
                     android:hint="Confirm Password"
                     android:textSize="20dp"
                     android:layout_marginBottom="10dp"
+                    android:inputType="textPassword"
                     android:textColorHint="@color/white"></EditText>
-
             </LinearLayout>
 
-            <Button
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/loginbtnborder"
-                app:backgroundTint = "@null"
-                android:layout_marginVertical="30dp"
-                android:layout_marginHorizontal="20dp"
-                android:text="Sign Up"
-                android:textSize="25dp">
-            </Button>
-
-
+                android:layout_marginTop="@dimen/_16sdp"
+                android:animateLayoutChanges="true">
+                <Button
+                    android:id="@+id/btn_Signup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="30dp"
+                    android:background="@drawable/loginbtnborder"
+                    android:text="Sign Up"
+                    android:textSize="25dp"
+                    app:backgroundTint="@null"></Button>
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="center"
+                    android:visibility="invisible"/>
+            </FrameLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
