--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/chatapp_background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".View.ProfileActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,6 +22,7 @@
             android:layout_marginRight="-40dp">
         </ImageView>
         <TextView
+            android:id="@+id/imageBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Profile"
