--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,187 +3,171 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".View.SignUpActivity">
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/chatapp_background"
+        android:gravity="center"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/chatapp_background"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="45dp"
-                android:gravity="center"
-                android:orientation="horizontal">
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/chatapp_logo"></ImageView>
 
-                <ImageView
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:src="@drawable/chatapp_logo"></ImageView>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="Chat App"
-                    android:textColor="@android:color/white"
-                    android:textSize="45sp"
-                    android:textStyle="bold"></TextView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="30dp"
-                android:layout_gravity="center"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/btn_Sigin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/loginbtnborder"
-                    android:paddingHorizontal="50dp"
-                    android:text="Login"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    app:backgroundTint="#C8C6C6" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/loginbtnborder"
-                    android:paddingHorizontal="35dp"
-                    android:text="Sign up"
-                    android:layout_marginHorizontal="5dp"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    app:backgroundTint="@null" />
-            </LinearLayout>
-            <FrameLayout
-                android:id="@+id/layoutImage"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Chat App"
+                android:textColor="@android:color/white"
+                android:textSize="45sp"
+                android:textStyle="bold"></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_Sigin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/loginbtnborder"
+                android:paddingHorizontal="50dp"
+                android:text="Login"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                app:backgroundTint="#C8C6C6" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:background="@drawable/loginbtnborder"
+                android:paddingHorizontal="35dp"
+                android:text="Sign up"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                app:backgroundTint="@null" />
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/layoutImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20.00dp"
+            android:layout_marginBottom="20dp">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/imageProfile"
+                android:layout_width="80.00dp"
+                android:layout_height="80.00dp"
+                android:background="@drawable/background_image"
+                android:backgroundTint="#AAB8C2"
+                android:scaleType="centerCrop"
+                app:riv_oval="true"></com.makeramen.roundedimageview.RoundedImageView>
+
+            <TextView
+                android:id="@+id/textAddImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Add Image"
+                android:textSize="10.00sp" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/input_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="20.00dp">
-                <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/imageProfile"
-                    android:layout_width="80.00dp"
-                    android:layout_height="80.00dp"
-                    android:background="@drawable/background_image"
-                    android:backgroundTint = "#AAB8C2"
-                    android:scaleType="centerCrop"
-                    app:riv_oval="true">
-                </com.makeramen.roundedimageview.RoundedImageView>
-                <TextView
-                    android:id="@+id/textAddImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Add Image"
-                    android:textSize="10.00sp"/>
-            </FrameLayout>
-            <LinearLayout
+                android:background="@drawable/buttonborder"
+                android:hint="Name"
+                android:inputType="textPersonName"
+                android:textColorHint="@color/white"
+                android:textSize="20dp"
+                app:backgroundTint="#AAB8C2"></EditText>
+
+            <EditText
+                android:id="@+id/input_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/buttonborder"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:textColorHint="@color/white"
+                android:textSize="20dp"
+                app:backgroundTint="#AAB8C2"></EditText>
+
+            <EditText
+                android:id="@+id/input_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/buttonborder"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColorHint="@color/white"
+                android:textSize="20dp"
+                app:backgroundTint="#AAB8C2"></EditText>
+
+            <EditText
+                android:id="@+id/input_confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/buttonborder"
+                android:hint="Confirm Password"
+                android:inputType="textPassword"
+                android:textColorHint="@color/white"
+                android:textSize="20dp"
+                app:backgroundTint="#AAB8C2"></EditText>
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:animateLayoutChanges="true">
+
+            <Button
+                android:id="@+id/btn_Signup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:orientation="vertical">
-                <EditText
-                    android:id="@+id/input_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/buttonborder"
-                    android:layout_marginBottom="20dp"
-                    app:backgroundTint = "#AAB8C2"
-                    android:hint="Name"
-                    android:textSize="20dp"
-                    android:inputType="textPersonName"
-                    android:textColorHint="@color/white"></EditText>
-                <EditText
-                    android:id="@+id/input_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/buttonborder"
-                    android:layout_marginBottom="20dp"
-                    app:backgroundTint = "#AAB8C2"
-                    android:hint="Email"
-                    android:textSize="20dp"
-                    android:inputType="textEmailAddress"
-                    android:textColorHint="@color/white"></EditText>
-                <EditText
-                    android:id="@+id/input_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/buttonborder"
-                    app:backgroundTint = "#AAB8C2"
-                    android:hint="Password"
-                    android:textSize="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:inputType="textPassword"
-                    android:textColorHint="@color/white"></EditText>
-                <EditText
-                    android:id="@+id/input_confirm_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/buttonborder"
-                    app:backgroundTint = "#AAB8C2"
-                    android:hint="Confirm Password"
-                    android:textSize="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:inputType="textPassword"
-                    android:textColorHint="@color/white"></EditText>
-            </LinearLayout>
+                android:layout_marginVertical="30dp"
+                android:background="@drawable/loginbtnborder"
+                android:text="Sign Up"
+                android:textSize="25dp"
+                app:backgroundTint="@null"></Button>
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:animateLayoutChanges="true">
-                <Button
-                    android:id="@+id/btn_Signup"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginVertical="30dp"
-                    android:background="@drawable/loginbtnborder"
-                    android:text="Sign Up"
-                    android:textSize="25dp"
-                    app:backgroundTint="@null"></Button>
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    android:layout_width="@dimen/_25sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:layout_gravity="center"
-                    android:visibility="invisible"/>
-            </FrameLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="Already have an account?"
-                    android:layout_marginRight="10dp"
-                    android:textColor="@color/white"></TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:text="Login now!"
-                    android:background="@drawable/underline"
-                    android:textColor="@color/white"></TextView>
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_gravity="center"
+                android:visibility="invisible" />
+        </FrameLayout>
+    </LinearLayout>
 </layout>
