--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -69,9 +69,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/buttonborder"
-                    android:hint="Phone number"
+                    android:hint="Email"
                     android:textColorHint="@color/white"
                     android:textSize="20dp"
+                    android:inputType="textEmailAddress"
                     app:backgroundTint="#AAB8C2"></EditText>
             </LinearLayout>
 
