--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".View.SignUpActivity">
-
+    <data>
+        <variable
+            name="SignUpViewModel"
+            type="com.example.demomvvm.viewmodel.SignUpViewModel" />
+    </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -47,7 +51,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/loginbtnborder"
                 android:paddingHorizontal="50dp"
-                android:text="Login"
+                android:text="Sign In"
+                android:onClick="@{()->SignUpViewModel.onSignInButtonClick(context)}"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:backgroundTint="#C8C6C6" />
@@ -101,6 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
+                android:text="@={SignUpViewModel.name}"
                 android:background="@drawable/buttonborder"
                 android:hint="Name"
                 android:inputType="textPersonName"
@@ -113,6 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
+                android:text="@={SignUpViewModel.email}"
                 android:background="@drawable/buttonborder"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
@@ -127,6 +134,7 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/buttonborder"
                 android:hint="Password"
+                android:text="@={SignUpViewModel.password}"
                 android:inputType="textPassword"
                 android:textColorHint="@color/white"
                 android:textSize="20dp"
@@ -137,6 +145,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:text="@={SignUpViewModel.confirm_password}"
                 android:background="@drawable/buttonborder"
                 android:hint="Confirm Password"
                 android:inputType="textPassword"
@@ -156,6 +165,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
+
                 android:layout_marginVertical="30dp"
                 android:background="@drawable/loginbtnborder"
                 android:text="Sign Up"
